--- a/josai.css
+++ b/josai.css
@@ -1,1 +1,2 @@
-img.imagechange {width: 150px; height: 200px}
+img.Josai_Logo.JPG {width: 200px; height: 150px}
+img.medamayaki.jpg {width: 200px; height: 150px}
